samples/_failures_safe/1761486634_eeb98f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdc2492e.c: In function ‘main’:
./samples/SAFE/__tmp_fdc2492e.c:155:21: error: expected declaration or statement at end of input
  155 |                     print_matrix(&result, "Result");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_fdc2492e.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdc2492e.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdc2492e.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdc2492e.c:155:21: error: expected declaration or statement at end of input
